--- a/containers/picsum-photos/Dockerfile.dev
+++ b/containers/picsum-photos/Dockerfile.dev
@@ -1,9 +1,6 @@
 FROM docker.io/golang:1.19-alpine
 
-RUN apk add --update --repository http://dl-cdn.alpinelinux.org/alpine/edge/testing vips-dev && \
-    apk add \
-      git \
-      make \
+RUN apk add --update \
       gcc \
       musl-dev && \
     go install github.com/go-delve/delve/cmd/dlv@v1.9.1
