--- a/kubernetes/charts/picsum-photos/templates/picsum-photos.yaml
+++ b/kubernetes/charts/picsum-photos/templates/picsum-photos.yaml
@@ -20,7 +20,8 @@ spec:
       - name: picsum-registry
       containers:
       - name: picsum
-        image: '{{ .Values.picsumPhotosDockerImage }}'
+        image: 'registry.digitalocean.com/picsum-registry/picsum-photos@sha256:1267a48ce0e07b464e0dd6ba1790b959c0df964304c4d7fff5b730d5ae3eb145'
+        imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
         livenessProbe:
